added searchable drinks

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,12 @@
-/******************************************
-/* CSS
-/*******************************************/
-
-/* Box Model Hack */
-*{
-  box-sizing: border-box;
-}
-
-/******************************************
-/* LAYOUT
-/*******************************************/
 img{
   display: block;
   margin: 0 auto;
 }
-
-
-/******************************************
-/* ADDITIONAL STYLES
-/*******************************************/
+h2{
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+h3{
+  text-align: center;
+}
